fix sign up button alignment

--- a/src/components/newsletter/Newsletter.scss
+++ b/src/components/newsletter/Newsletter.scss
@@ -1,99 +1,80 @@
-@import './../designUtils/colors';
+@import "./../designUtils/colors";
 
-.newsletterSubscription{
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  border-bottom: 1px solid #dadada;
-  height: 200px;
+.newsletterSubscription {
+	display: flex;
+	flex-flow: row wrap;
+	align-items: center;
+	border-bottom: 1px solid #dadada;
+	height: 200px;
 
-  &__title{
-    max-width: 400px;
-    font-size: 30px;
-    line-height: 1.5;
-    
-    h4{
-      font-weight: 400;
-    }
-    p{
-      font-size: 16px;
-    }
-  }
+	&__title {
+		max-width: 400px;
+		font-size: 30px;
+		line-height: 1.5;
 
-  &__formInput{
-    input{
-      height: 45px;
-      width: 300px;
-    }
-    button{
-      display: inline-block;
-      vertical-align: middle;
-      background-color: $background-green;
-      color: $icon-color;
-      height: 45px;
-      width: 140px;
-      border-radius: 5px;
-      cursor: pointer;
-      border: none;
+		h4 {
+			font-weight: 400;
+		}
+		p {
+			font-size: 16px;
+		}
+	}
 
-      .button-icon{
-        font-size: 20px;
-        background-color: $background-green;
-        color: $icon-color;
-      }
-    }
-  }
+	&__formInput {
+		display: flex;
+		align-items: center;
+		flex-flow: row wrap;
+
+		input {
+			height: 45px;
+			width: 300px;
+			border-top-left-radius: 5px;
+			border-bottom-left-radius: 5px;
+			border: 1px solid #eee;
+			font-size: 18px;
+			padding-left: 10px;
+
+			&:focus {
+				outline: none;
+			}
+		}
+
+		.button {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			background-color: $background-green;
+			color: $icon-color;
+			height: 42px;
+			width: 160px;
+			font-weight: 200;
+			border: none;
+			border-top-right-radius: 5px;
+			border-bottom-right-radius: 5px;
+			padding: 0px 12px;
+			cursor: pointer;
+
+			.button-icon {
+				font-size: 20px;
+				background-color: $background-green;
+				color: $icon-color;
+				margin-left: 5px;
+			}
+		}
+	}
 }
 
-// .newsletterSubscription {
-//     margin: 10px;
-//     border: 1px solid $background-green;
-//     padding: 40px 25px;
-//     border-radius: 7px;
-//     width: 520px;
-//     background-color: rgba(36, 85, 209, 0.15);
-//     text-align: center;
-//     font-family: arial;
-  
-//     &__title {
-//       font-size: 24px;
-//       font-weight: 600;
-//       color: $background-green;
-//       margin-bottom: 15px;
-//     }
-  
-//     p {
-//       width: 60%;
-//       font-size: 0.9em;
-//       margin: 0 auto;
-//       margin-bottom: 20px;
-//     }
-  
-//     &__formInput {
-//       display: flex;
-//       flex-wrap: wrap;
-//       margin-bottom: 8px;
-//       input {
-//         width: 100%;
-//         padding: 15px;
-//         border: $background-gray 1px solid;
-//         border-radius: 3px;
-//       }
-//     }
-  
-//     button {
-//       width: 100%;
-//       padding: 15px;
-//       color: white;
-//       border: none;
-//       border-radius: 3px;
-//       font-size: 1.1em;
-//       text-decoration: uppercase;
-//       background: rgb(34, 199, 119);
-//       background: linear-gradient(
-//         rgb(0, 255, 145) 0%,
-//         rgb(34, 199, 108) 100%
-//       );
-//     }
-//   }
-  
+@media (max-width: 750px) {
+	.newsletterSubscription {
+		display: flex;
+		flex-direction: column wrap;
+		&__formInput {
+			input {
+				width: 100%;
+			}
+			button {
+				width: 100%;
+			}
+		}
+	}
+}
